--- a/flash-frontend/package.json
+++ b/flash-frontend/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "/flashNew/",
   "dependencies": {
+    "@rsuite/icons": "^1.3.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "lucide-react": "^0.488.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.0",
