--- a/flash-frontend/package.json
+++ b/flash-frontend/package.json
@@ -5,6 +5,8 @@
   "homepage": "/flashNew/",
   "dependencies": {
     "@rsuite/icons": "^1.3.0",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
